<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    <!--custom toolbar-->
    <LinearLayout
        android:id="@+id/view_invoiceReport_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_toolbar_height"
        android:background="@color/colorPrimary"
        android:baselineAligned="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <include
                layout="@layout/toolbar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingTop="@dimen/padding_m" />


        </LinearLayout>
    </LinearLayout>




    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_l">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPaddingLeft="@dimen/padding_l"
            android:id="@+id/bottom_layout"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:padding="@dimen/padding_m">




                <com.rey.material.widget.Button
                    android:id="@+id/button_preview_home"
                    style="@style/Material.Drawable.Ripple.Wave"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/no_sale_right_badge"
                    android:layout_margin="@dimen/padding_l"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="true"
                    android:drawableLeft="@drawable/ic_home_white"
                    android:drawablePadding="@dimen/padding_l"
                    android:textSize="@dimen/text_m"
                    android:paddingLeft="@dimen/button_padding"
                    android:paddingRight="@dimen/button_padding"
                    android:text="@string/home"
                    app:rd_enable="true"/>




                <com.rey.material.widget.Button
                    android:id="@+id/button_preview_print"
                    style="@style/Material.Drawable.Ripple.Wave"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/button_print"
                    android:layout_margin="@dimen/padding_l"
                    android:layout_gravity="start|center"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="true"
                    android:drawableLeft="@drawable/ic_print_white"
                    android:drawablePadding="@dimen/padding_l"
                    android:textSize="@dimen/text_m"
                    android:paddingLeft="@dimen/button_padding"
                    android:paddingRight="@dimen/button_padding"
                    android:text="@string/printpdf"
                    android:enabled="false"
                    app:rd_enable="true"/>
                <com.rey.material.widget.Button
                    android:visibility="gone"
                    android:id="@+id/button_background_print"
                    style="@style/Material.Drawable.Ripple.Wave"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/button_print"
                    android:layout_margin="@dimen/padding_l"
                    android:layout_gravity="start|center"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="true"
                    android:drawableLeft="@drawable/ic_print_white"
                    android:drawablePadding="@dimen/padding_l"
                    android:textSize="@dimen/text_m"
                    android:paddingLeft="@dimen/button_padding"
                    android:paddingRight="@dimen/button_padding"
                    android:text="@string/print"
                    app:rd_enable="true"/>


            </LinearLayout>


        </android.support.v7.widget.CardView>


        <!--Error View with progressbar-->
        <include
            android:id="@+id/product_vanStock"
            layout="@layout/progress_recyclerview" />
        <RelativeLayout
            android:id="@+id/connectionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_xl"
            android:layout_marginTop="@dimen/padding_xl">


            <com.rey.material.widget.Button
                android:id="@+id/button_preview_connect"
                style="@style/Material.Drawable.Ripple.Wave"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="@dimen/padding_l"
                android:layout_marginTop="@dimen/padding_l"
                android:layout_marginEnd="@dimen/padding_l"
                android:layout_marginBottom="@dimen/padding_l"
                android:background="@drawable/return_right_finish"
                android:drawableLeft="@drawable/ic_bluetooth_connected"
                android:drawablePadding="@dimen/padding_l"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:text="@string/text_connect"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_m"
                android:visibility="visible"
                app:rd_enable="true" />




            <com.rey.material.widget.Button
                android:id="@+id/button_preview_connection_enabled"
                style="@style/Material.Drawable.Ripple.Wave"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/return_right_finish"
                android:layout_margin="@dimen/padding_l"
                android:textColor="@color/colorWhite"
                android:textAllCaps="true"
                android:textSize="@dimen/text_m"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:text="@string/text_enable_bluetooth"
                app:rd_enable="true"

                android:layout_centerInParent="true"
                android:visibility="gone" />



            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_preview_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/spinner_height"
                android:layout_toLeftOf="@+id/button_preview_connect"
                android:layout_alignBottom="@+id/button_preview_connect"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/padding_xxl"
                android:layout_marginEnd="@dimen/padding_xxl"
                android:spinnerMode="dropdown"
                android:theme="@style/ViewTheme_dark"
                />


        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_below="@id/connectionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:text="Day Summary Report"></TextView>
                <LinearLayout
                    android:layout_marginTop="@dimen/dim_50"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/total_cash_sale"></TextView>
                        <TextView
                            android:id="@+id/txt_cash_sale"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:layout_height="wrap_content"
                            android:text="0.00"></TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/total_credit_sale"></TextView>
                        <TextView
                            android:id="@+id/txt_credit_sale"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:layout_height="wrap_content"
                            android:text="0.00"></TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/total_return"></TextView>
                        <TextView
                            android:id="@+id/txt_return_sale"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:layout_height="wrap_content"
                            android:text="0.00"></TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/total_cash_collection"></TextView>
                        <TextView
                            android:id="@+id/txt_cash_collection"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:layout_height="wrap_content"
                            android:text="0.00"></TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/total_bank_collection"></TextView>
                        <TextView
                            android:id="@+id/txt_bank_collection"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:layout_height="wrap_content"
                            android:text="0.00"></TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/total_cheque_collection"></TextView>
                        <TextView
                            android:id="@+id/txt_cheque_collection"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:layout_height="wrap_content"
                            android:text="0.00"></TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/total_return_cash"></TextView>
                        <TextView
                            android:id="@+id/txt_return_cash"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:layout_height="wrap_content"
                            android:text="0.00"></TextView>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</LinearLayout>